--- a/src/BUILD.gn
+++ b/src/BUILD.gn
@@ -89,6 +89,7 @@ group("both_gn_and_gyp") {
     "//base:base",
     "//base:i18n",
     "//crypto:crypto",
+    "//lua:lua",
   ]
 
   deps += root_extra_deps
